fixed mobile navbar overlap

--- a/css/creative.css
+++ b/css/creative.css
@@ -95,6 +95,9 @@ aside {
     font-weight: 700;
     color: #f05f40;
 }
+.container-fluid>.navbar-header {
+    padding-bottom: 2rem;
+}
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
@@ -130,7 +133,6 @@ aside {
     .navbar-default {
         border-color: rgba(255,255,255,.3);
         background-color: rgba(255,255,255,.9);
-        padding-bottom: 10px;
         padding-right: 20px;
     }
 
